[tool.poetry]
name = "pact-testgen"
version = "0.1.0"
description = "Generate Python test cases from Pact files, for easier provider verification."
authors = ["Chris Lawlor <chris@pymetrics.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
